<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menuGroup1">
        <item android:title="@string/stropy">

<menu>
    <group
        android:id="@+id/menuGroup11">
    <item android:title="Strop RECTOR">
        <menu>
            <item android:id="@+id/material111"
                android:title="Strop RECTOR 12+5"
                android:contentDescription="0.18"
                android:titleCondensed="17"
                android:tooltipText="0.944"/>
            <item android:id="@+id/material112"
                android:title="Strop RECTOR 16+5"
                android:contentDescription="0.20"
                android:titleCondensed="21"
                android:tooltipText="1.05"/>
            <item android:id="@+id/material113"
                android:title="Strop RECTOR 20+5"
                android:contentDescription="0.22"
                android:titleCondensed="25"
                android:tooltipText="1.136"/>
            <item android:id="@+id/material114"
                android:title="Strop RECTOR 24+5"
                android:contentDescription="0.23"
                android:titleCondensed="29"
                android:tooltipText="1.261"/>
            <item android:id="@+id/material115"
                android:title="Strop RECTOLIGHT 12+5"
                android:contentDescription="0.14"
                android:titleCondensed="17"
                android:tooltipText="1.214"/>
            <item android:id="@+id/material116"
                android:title="Strop RECTOLIGHT 16+5"
                android:contentDescription="0.15"
                android:titleCondensed="21"
                android:tooltipText="1.4"/>
            <item android:id="@+id/material117"
                android:title="Strop RECTOLIGHT 20+5"
                android:contentDescription="0.17"
                android:titleCondensed="25"
                android:tooltipText="1.471"/>
        </menu>
    </item>
    </group>
    <group
        android:id="@+id/menuGroup12">
        <item android:title="Strop TERIVA">
            <menu>
                <item android:id="@+id/material121"
                    android:title="Strop TERIVA 2.0/1"
                    android:contentDescription="0.37"
                    android:titleCondensed="27"
                    android:tooltipText="0.729"/>
                <item android:id="@+id/material122"
                    android:title="Strop TERIVA 2.0/2"
                    android:contentDescription="0.37"
                    android:titleCondensed="34"
                    android:tooltipText="0.919"/>
                <item android:id="@+id/material123"
                    android:title="Strop TERIVA 2.0/3"
                    android:contentDescription="0.37"
                    android:titleCondensed="38"
                    android:tooltipText="1.027"/>
                <item android:id="@+id/material124"
                    android:title="Strop TERIVA 6.0"
                    android:contentDescription="0.39"
                    android:titleCondensed="34"
                    android:tooltipText="0.872"/>
                <item android:id="@+id/material125"
                    android:title="Strop TERIVA 8.0"
                    android:contentDescription="0.39"
                    android:titleCondensed="34"
                    android:tooltipText="0.872"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/menuGroup13">
        <item android:title="Płyty kanałowe">
            <menu>
                <item android:id="@+id/material131"
                    android:title="Płyty kanałowe 200"
                    android:contentDescription="0.14"
                    android:titleCondensed="20"
                    android:tooltipText="1.429"/>
                <item android:id="@+id/material132"
                    android:title="Płyty kanałowe 220"
                    android:contentDescription="0.15"
                    android:titleCondensed="22"
                    android:tooltipText="1.467"/>
                <item android:id="@+id/material133"
                    android:title="Płyty kanałowe 265"
                    android:contentDescription="0.17"
                    android:titleCondensed="27"
                    android:tooltipText="1.559"/>
                <item android:id="@+id/material134"
                    android:title="Płyty kanałowe 320"
                    android:contentDescription="0.18"
                    android:titleCondensed="32"
                    android:tooltipText="1.778"/>
                <item android:id="@+id/material135"
                    android:title="Płyty kanałowe 400"
                    android:contentDescription="0.20"
                    android:titleCondensed="40"
                    android:tooltipText="2.0"/>
                <item android:id="@+id/material136"
                    android:title="Płyty kanałowe 500"
                    android:contentDescription="0.23"
                    android:titleCondensed="40"
                    android:tooltipText="2.17"/>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/menuGroup14">
        <item android:title="Strop Kleina">
            <menu>
                <item android:id="@+id/material141"
                    android:title="Strop lekki"
                    android:contentDescription="0.077"
                    android:titleCondensed="7"
                    android:tooltipText="0,85"/>
                <item android:id="@+id/material142"
                    android:title="Strop ciężki"
                    android:contentDescription="0.141"
                    android:titleCondensed="12"
                    android:tooltipText="0.85"/>
            </menu>
        </item>
    </group>
    <item android:id="@+id/material15"
        android:title="Strop FILIGRAN"
        android:contentDescription="1"
        android:titleCondensed="15"
        android:tooltipText="2.5"/>
    <item android:id="@+id/material16"
        android:title="Strop Ackermana"
        android:contentDescription="0.23"
        android:titleCondensed="40"
        android:tooltipText="2.17"/>
</menu>
        </item>
    </group>

    <group
        android:id="@+id/menuGroup3">
        <item android:title="Materiały konstrukcyjne">
            <menu>
                <item android:id="@+id/material31"
                    android:title="@string/concrete_2400"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="1.7"/>
                <item android:id="@+id/material32"
                    android:title="@string/concrete_2200"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="1.3"/>
                <item android:id="@+id/material33"
                    android:title="@string/concrete_1900"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="1.0"/>
                <item android:id="@+id/material34"
                    android:title="@string/reinforced_concrete"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="2.3"/>
                <item android:id="@+id/material35"
                    android:title="Jastrych gipsowy"
                    android:contentDescription="1"
                    android:titleCondensed="5"
                    android:tooltipText="1.0"/>
                <item android:id="@+id/material36"
                    android:title="Jastrych gipsowo-piaskowy"
                    android:contentDescription="1"
                    android:titleCondensed="5"
                    android:tooltipText="1.2"/>
                <item android:id="@+id/material37"
                    android:title="Jastrych cementowy"
                    android:titleCondensed="5"
                    android:contentDescription="1"
                    android:tooltipText="1.4"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menuGroup4">
        <item android:title="@string/drewno_i_mat_drewnopochodne">
            <menu>
                <item android:id="@+id/material41"
                    android:title="@string/sosna_wierk_w_poprzek_w_kien"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.16"/>
                <item android:id="@+id/material42"
                    android:title="@string/sosna_swierk_wzdluz_w_kien"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.3"/>
                <item android:id="@+id/material43"
                    android:title="@string/dab_buk_w_poprzek_wlokien"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.22"/>
                <item android:id="@+id/material44"
                    android:title="@string/dab_buk_wzdluz_wlokien"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.4"/>
                <item android:id="@+id/material45"
                    android:title="@string/plyta_osb"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="0.13"/>
                <item android:id="@+id/material46"
                    android:title="@string/plyta_mdf_800"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="0.19"/>
                <item android:id="@+id/material47"
                    android:title="@string/plywood"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="0.16"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menuGroup5">
        <item android:title="@string/materialy_termoizolacyjne">
            <menu>
                <item android:id="@+id/material51"
                    android:title="@string/styropian_045"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.045"/>
                <item android:id="@+id/material52"
                    android:title="@string/styropian_042"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.042"/>
                <item android:id="@+id/material53"
                    android:title="@string/styropian_040"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.04"/>
                <item android:id="@+id/material54"
                    android:title="@string/styropian_035"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.035"/>
                <item android:id="@+id/material55"
                    android:title="@string/welna_mineralna_045"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.045"/>
                <item android:id="@+id/material56"
                    android:title="@string/welna_mineralna_040"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.040"/>
                <item android:id="@+id/material57"
                    android:title="@string/welna_mineralna_033"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.033"/>
                <item android:id="@+id/material58"
                    android:title="@string/welna_mineralna_035"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.035"/>
                <item android:id="@+id/material59"
                    android:title="@string/plyty_pu_029"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.029"/>
                <item android:id="@+id/material510"
                    android:title="@string/plyty_pir_023"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.023"/>
                <item android:id="@+id/material511"
                    android:title="@string/nieruchoma_warstwa_powietrza"
                    android:contentDescription="1"
                    android:titleCondensed="10"
                    android:tooltipText="0.025"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menuGroup6">
        <item android:title="@string/materialy_oslonowe">

            <menu>
                <item android:id="@+id/material61"
                    android:title="@string/tynk_cementowy"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="1.0"/>
                <item android:id="@+id/material62"
                    android:title="@string/tynk_cementowo_wapienny"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="0.82"/>
                <item android:id="@+id/material63"
                    android:title="@string/tynk_wapienny"
                    android:contentDescription="1"
                    android:titleCondensed="2"
                    android:tooltipText="0.7"/>
                <item android:id="@+id/material64"
                    android:title="@string/tynk_gipsowy_lekki"
                    android:contentDescription="1"
                    android:titleCondensed="1"
                    android:tooltipText="0.4"/>
                <item android:id="@+id/material65"
                    android:title="@string/tynk_cienkowarstwowy"
                    android:contentDescription="1"
                    android:tooltipText="0.7"/>
                <item android:id="@+id/material66"
                    android:title="@string/plyty_gipsowo_kartonowe"
                    android:contentDescription="1"
                    android:titleCondensed="1"
                    android:tooltipText="0.23"/>
            </menu>
        </item>
    </group>

        <item android:id="@+id/material7"
            android:title="@string/materia_wlasny"
            android:contentDescription="1"
            android:tooltipText="1.0">

        </item>




</menu>